Fixes dark mode drop-downs list item styles for all pages

--- a/client/styles/_dark.scss
+++ b/client/styles/_dark.scss
@@ -493,7 +493,7 @@ html.dark {
         color: #fff !important;
     }
 
-    .lobby-container .dropdown-item {
+    .dropdown-item {
         color: #fff !important;
     }
 
